need to fix bug, only test click if overlay is visible

--- a/css/style.css
+++ b/css/style.css
@@ -400,7 +400,7 @@ background-color:yellow;
 
 #overlay{
   position: fixed;
-  /* display: none; */
+  display: none;
   width: 100%;
   height: 100%;
   top: 0;
@@ -426,4 +426,9 @@ background-color:yellow;
   font-size: 150px;
   transform: translateY(calc(50vh - 100px));
   animation: flicker1 1s infinite alternate;
+}
+#playAgain{
+  font-size: 250%;
+  text-align: center;
+  transform: translateY(calc(50vh - 100px));
 }
